--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
  <head>
  	<title></title>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  	<link rel="stylesheet" href="css/style.css">
  </head>
  <body>
